# ulu-ai

./: .gitignore  ReadME.md  pyproject.toml
docs/examples/inputs/text/: image_captioning.txt  sentiment_analysis.txt  (+1 more)
models/image-to-text/handwritten_transcription/: Dockerfile  handler.py
models/image-to-text/image_captioning/: handler.py
models/image_upscaling/: Dockerfile  handler.py  requirements.txt
models/lipsyncing/sadtalker/: Dockerfile  handler.py  utils.py
models/text-classification/sentiment_analysis/: handler.py  requirements.txt
models/text-to-audio/: handler.py  requirements.txt  utils.py
models/text-to-text/translation/: Dockerfile  handler.py  utils.py
src/: config.py  config.yaml  examples.py  predict.py  streamlit.py  utils.py
src/common/: login.py  predict.py  utils.py
src/components/: ai_on_documents.py  audio_to_text.py  image_to_image.py  image_to_text.py  lipsyncing.py  text_classification.py  text_to_image.py  text_to_text.py
src/image-to-text/blip2/: Dockerfile  handler.py  requirements.txt  utils.py
src/image-to-text/car_plate_recognition/: utils.py
src/image-to-text/handwritten_transcription/: utils.py
src/image-to-text/image_captioning/: Dockerfile  handler.py  requirements.txt  utils.py
src/image-to-text/plate_recognition/: handler.py
src/lipsyncing/sadtalker/: Dockerfile  handler.py  inference.py  requirements.txt  requirements_2.txt
src/models/image_upscaling/: handler.py  utils.py
src/sentiment-analysis/: handler.py  inference.py
src/services/: display.py  predict.py  streamlit.py  utils.py
(+15 files in other folders)
