[tool.poetry]
name = "ulu.ai"
version = "0.0.1"
description = ""
authors = ["Santiago Martinez <smartinezbragado@gmail.com>"]
readme = "README.md"
packages = [
    { include = "sentiment-analysis", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "~=1.4"
runpod = "^1.2.1"
torch = "^2.0.1"
transformers = "^4.33.3"
streamlit = "^1.27.2"
boto3 = "^1.28.65"
streamlit-login-auth-ui = "^0.2.0"
barfi = "^0.7.0"


[tool.poetry.group.dev.dependencies]
sqlparse = "~0.4"
assertpy = ">=1.1"
black = ">=22.3.0"
flake8 = ">=4.0.1"
m2r2 = ">=0.3.2"
pydata-sphinx-theme = ">=0.6.3"
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
pytest-xdist = ">=2.5.0"
Sphinx = ">=4.3.2"
sphinx-rtd-theme = ">=1.0.0"
isort = ">=5.10.1"
pre-commit = ">=2.20.0"
mypy = "1.4.1"
pandas-stubs = "2.0.2.230605"
types-setuptools = ">=63.2.1"
jupyter = "^1.0.0"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.dagster]
module_name = "assets"
